// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HorizontalList with footer renders a list 1`] = `
<div
  class="css-view-1dbjc4n"
  data-testid="horizontal-list"
>
  <div
    class="css-view-1dbjc4n r-WebkitOverflowScrolling-150rngu r-flexDirection-18u37iz r-flexGrow-16y2uox r-flexShrink-1wbh5a2 r-overflowX-lltvgl r-overflowY-buy8e9 r-transform-1sncvnh"
  >
    <div
      class="css-view-1dbjc4n r-flexDirection-18u37iz"
    >
      <div
        class="css-view-1dbjc4n r-flexDirection-18u37iz"
      >
        <div
          class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
        >
          <div
            class="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
            style="background-image: url(categories/Fortnite-376x500.jpg);"
          />
          <img
            alt=""
            class="css-accessibilityImage-9pa8cd"
            draggable="false"
            src="categories/Fortnite-376x500.jpg"
          />
        </div>
      </div>
      <div
        class="css-view-1dbjc4n r-flexDirection-18u37iz"
      >
        <div
          class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
        >
          <div
            class="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
            style="background-image: url(categories/Just%20Chatting-376x500.jpg);"
          />
          <img
            alt=""
            class="css-accessibilityImage-9pa8cd"
            draggable="false"
            src="categories/Just%20Chatting-376x500.jpg"
          />
        </div>
      </div>
      <div
        class="css-view-1dbjc4n"
        style="width: 0px;"
      />
    </div>
  </div>
  <div
    class="css-text-76zvg2"
    dir="auto"
    style="font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Helvetica Neue',sans-serif; line-height: 1.5;"
  >
    FOOTER
  </div>
</div>
`;

exports[`HorizontalList with header renders a list 1`] = `
<div
  class="css-view-1dbjc4n"
  data-testid="horizontal-list"
>
  <div
    class="css-text-76zvg2"
    dir="auto"
    style="font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Helvetica Neue',sans-serif; line-height: 1.5;"
  >
    HEADER
  </div>
  <div
    class="css-view-1dbjc4n r-WebkitOverflowScrolling-150rngu r-flexDirection-18u37iz r-flexGrow-16y2uox r-flexShrink-1wbh5a2 r-overflowX-lltvgl r-overflowY-buy8e9 r-transform-1sncvnh"
  >
    <div
      class="css-view-1dbjc4n r-flexDirection-18u37iz"
    >
      <div
        class="css-view-1dbjc4n r-flexDirection-18u37iz"
      >
        <div
          class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
        >
          <div
            class="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
            style="background-image: url(categories/Fortnite-376x500.jpg);"
          />
          <img
            alt=""
            class="css-accessibilityImage-9pa8cd"
            draggable="false"
            src="categories/Fortnite-376x500.jpg"
          />
        </div>
      </div>
      <div
        class="css-view-1dbjc4n r-flexDirection-18u37iz"
      >
        <div
          class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
        >
          <div
            class="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
            style="background-image: url(categories/Just%20Chatting-376x500.jpg);"
          />
          <img
            alt=""
            class="css-accessibilityImage-9pa8cd"
            draggable="false"
            src="categories/Just%20Chatting-376x500.jpg"
          />
        </div>
      </div>
      <div
        class="css-view-1dbjc4n"
        style="width: 0px;"
      />
    </div>
  </div>
</div>
`;

exports[`HorizontalList without header nor footer renders a list 1`] = `
<div
  class="css-view-1dbjc4n"
  data-testid="horizontal-list"
>
  <div
    class="css-view-1dbjc4n r-WebkitOverflowScrolling-150rngu r-flexDirection-18u37iz r-flexGrow-16y2uox r-flexShrink-1wbh5a2 r-overflowX-lltvgl r-overflowY-buy8e9 r-transform-1sncvnh"
  >
    <div
      class="css-view-1dbjc4n r-flexDirection-18u37iz"
    >
      <div
        class="css-view-1dbjc4n r-flexDirection-18u37iz"
      >
        <div
          class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
        >
          <div
            class="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
            style="background-image: url(categories/Fortnite-376x500.jpg);"
          />
          <img
            alt=""
            class="css-accessibilityImage-9pa8cd"
            draggable="false"
            src="categories/Fortnite-376x500.jpg"
          />
        </div>
      </div>
      <div
        class="css-view-1dbjc4n r-flexDirection-18u37iz"
      >
        <div
          class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
        >
          <div
            class="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
            style="background-image: url(categories/Just%20Chatting-376x500.jpg);"
          />
          <img
            alt=""
            class="css-accessibilityImage-9pa8cd"
            draggable="false"
            src="categories/Just%20Chatting-376x500.jpg"
          />
        </div>
      </div>
      <div
        class="css-view-1dbjc4n"
        style="width: 0px;"
      />
    </div>
  </div>
</div>
`;
